Arreglo los tests con los cambios hechos antes